--- a/index.html
+++ b/index.html
@@ -457,6 +457,7 @@
     .TableH1 {
         text-align: center;
         width: 100%;
+        margin: 7% auto;
     }
 
 
@@ -470,94 +471,6 @@
 
     /* CONTENIDO DEL CAROUSEL */
 
-
-    .ie-radio-check {
-        display: inline-block;
-        opacity: 0;
-        width: 0;
-        height: 0;
-        margin: 0;
-        margin: 0 0 0 -9999px;
-        float: left;
-        position: absolute;
-        -webkit-appearance: none;
-    }
-
-    input:checked~.ie-carousel {
-        display: block !important;
-    }
-
-    input:checked~.ie-carouselFallback {
-        display: none;
-    }
-
-    .mc-carousel-id-1751619445451 {
-        text-align: center;
-    }
-
-    .mc-carousel-id-1751619445451 .ie-carousel-wrap {
-
-        margin: 0 auto
-    }
-
-    .ie-carousel-wrap {
-        position: relative;
-    }
-
-    .ie-carousel input:focus~.ie-thumb {
-        outline: Highlight auto 2px;
-        outline: -webkit-focus-ring-color auto 5px;
-        outline-offset: 3px;
-    }
-
-    .ie-slide {
-        width: 100%;
-        background-size: contain;
-        background-position: center;
-        background-repeat: no-repeat;
-        display: block;
-    }
-
-    .mc-carousel-id-1751619445451 .ie-slide {
-        padding-bottom: 41.66666666666667%;
-    }
-
-    .ie-thumb {
-        width: 0.5em;
-        height: 0.5em;
-        border-radius: 50%;
-        margin: .3em .1em;
-        display: inline-block;
-        border: .1em solid;
-    }
-
-    .ie-carousel:not(:has(input:checked)) .ie-start~.ie-thumb {
-        background: currentColor;
-    }
-
-    input:checked~.ie-thumb {
-        background: #e473b1 !important;
-    }
-
-    .ie-pos-arrow {
-        max-height: 0;
-        text-align: left;
-    }
-
-    .ie-arrow {
-        display: inline-block;
-        max-height: 0;
-        max-width: 0;
-        border: 1em solid transparent;
-        border-right-color: currentColor;
-        border-left-width: 0;
-        opacity: 0.99;
-        position: relative;
-        vertical-align: middle;
-        margin: 0 5% 0 .2em;
-        color: #e473b1;
-        ;
-    }
 
     .mc-carousel-id-1751619445451 .ie-arrow-padding {
         display: inline-block;
@@ -627,32 +540,8 @@
     }
 
 
-    .mc-carousel-id-1751619445451 input:checked+.ie-img1~* .ie-mid .ie-img1,
-    .mc-carousel-id-1751619445451 input:checked+.ie-img2~* .ie-mid .ie-img2,
-    .mc-carousel-id-1751619445451 input:checked+.ie-img3~* .ie-mid .ie-img3,
-    .mc-carousel-id-1751619445451 input:checked+.ie-img4~* .ie-mid .ie-img4 {
-        display: block;
-    }
-
     .mc-carousel-id-1751619445451 input:checked~.ie-end {
         display: none;
-    }
-
-
-    input:checked+.mc-carousel-id-1751619445451 .ie-img1 span {
-        background-image: url(./01.gif)
-    }
-
-    input:checked+.mc-carousel-id-1751619445451 .ie-img2 span {
-        background-image: url(./02.gif);
-    }
-
-    input:checked+.mc-carousel-id-1751619445451 .ie-img3 span {
-        background-image: url(./03.gif);
-    }
-
-    input:checked+.mc-carousel-id-1751619445451 .ie-img4 span {
-        background-image: url(./04.gif);
     }
 
     .ie-carousel {
@@ -712,41 +601,8 @@
             animation: none;
         }
 
-        @keyframes mc-carousel-id-1751619445451-anim {
-            0% {
-                z-index: 1;
-                opacity: 1;
-            }
 
-            19% {
-                opacity: 1;
-            }
 
-            20% {
-                z-index: 1;
-            }
-
-            21% {
-                z-index: 0;
-                opacity: 0;
-            }
-
-            99% {
-                z-index: 0;
-                opacity: 0;
-            }
-
-            100% {
-                opacity: 1
-            }
-        }
-
-        .mc-carousel-id-1751619445451:has(input) .ie-thumb {
-            animation-name: mc-carousel-id-1751619445451-thumb;
-            animation-duration: 37.5s;
-            animation-iteration-count: infinite;
-            background: currentColor;
-        }
 
         .mc-carousel-id-1751619445451:has(input:checked) .ie-thumb {
             animation: none;
@@ -779,9 +635,7 @@
         }
     }
 
-    .& .ie-carousel input:focus~.ie-thumb {
-        outline: Highlight auto 5px;
-    }
+
 
 
     .TextoDondeCuando {
@@ -801,7 +655,19 @@
         left: 0px;
     }
 
+    .Maltese1IMG {
+        position: absolute;
+        width: 10%;
+        left: 0px;
+        bottom: 10%;
+    }
 
+    .Maltese2IMG {
+        position: absolute;
+        width: 10%;
+        right: 0px;
+        bottom: 10%;
+    }
 
     .MalteseDiv {}
 
@@ -1900,10 +1766,10 @@
         position: relative;
         width: 100%;
         height: 80vh;
-        /*  ocupa 80% del alto de la pantalla, puedes poner 100vh si quieres full screen */
         overflow: hidden;
         margin-top: 8%;
     }
+
 
     .carousel-images {
         display: flex;
@@ -1982,6 +1848,93 @@
 
         96% {
             transform: translateX(-500%);
+        }
+
+        100% {
+            transform: translateX(0);
+        }
+    }
+
+
+    .PCarouselCats {
+        width: 80%;
+        margin: 3% auto 0 auto;
+        text-align: center;
+        font-size: 18px;
+        line-height: 1.4;
+        background-color: white;
+        padding: 4%;
+        border-radius: 10px;
+    }
+
+    .carouselCats {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        will-change: transform;
+    }
+
+    .carousel-imagesCats {
+        display: flex;
+        width: 100%;
+        /* 4 slides */
+        height: 100%;
+        animation: slideCats 40s infinite linear;
+    }
+
+    .slide {
+        width: 100%;
+        height: 100%;
+        flex-shrink: 0;
+        display: flex;
+        flex-direction: column;
+        /* gif arriba, texto abajo */
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        padding: 20px;
+        box-sizing: border-box;
+    }
+
+    .slide img {
+        max-height: 60%;
+        width: auto;
+        object-fit: contain;
+    }
+
+
+    @keyframes slideCats {
+        0% {
+            transform: translateX(0);
+        }
+
+        20% {
+            transform: translateX(0);
+        }
+
+        25% {
+            transform: translateX(-100%);
+        }
+
+        45% {
+            transform: translateX(-100%);
+        }
+
+        50% {
+            transform: translateX(-200%);
+        }
+
+        70% {
+            transform: translateX(-200%);
+        }
+
+        75% {
+            transform: translateX(-300%);
+        }
+
+        95% {
+            transform: translateX(-300%);
         }
 
         100% {
@@ -2155,108 +2108,66 @@
                     </table>
 
 
-                    <table cellpadding="0" cellspacing="0" width="100%" role="presentation" style="min-width: 100%; "
-                        class="stylingblock-content-wrapper">
+                    <table class="TableH1">
                         <tr>
-                            <td class="stylingblock-content-wrapper camarker-inner">
-
-
-                                <!--[if mso]><!-->
-                                <input type="radio" id="interactive" style="display:none;display:contents;mso-hide:all;"
-                                    checked="">
-                                <div class="ie-carousel mc-carousel-id-1751619445451" style="display:none">
-                                    <div role="group" aria-label="carousel" class="ie-carousel-wrap">
-
-                                        <label role="presentation">
-                                            <input type="radio" name="mc-carousel-id-1751619445451"
-                                                class="ie-radio-check" aria-label="">
-                                            <div class="ie-pos-arrow ie-img1">
-                                                <div class="ie-arrow-wrap">
-                                                    <div class="ie-arrow-padding"></div>
-                                                    <div class="ie-arrow">
-                                                        <div class="ie-apple-clickarea"></div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="ie-pos-arrow ie-start">
-                                                <div class="ie-arrow-wrap">
-                                                    <div class="ie-arrow-padding"></div>
-                                                    <div class="ie-arrow">
-                                                        <div class="ie-apple-clickarea"></div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <label role="presentation">
-                                                <input type="radio" name="mc-carousel-id-1751619445451"
-                                                    class="ie-radio-check" aria-label="">
-                                                <div class="ie-pos-arrow ie-img2">
-                                                    <div class="ie-arrow-wrap">
-                                                        <div class="ie-arrow-padding"></div>
-                                                        <div class="ie-arrow">
-                                                            <div class="ie-apple-clickarea"></div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <label role="presentation">
-                                                    <input type="radio" name="mc-carousel-id-1751619445451"
-                                                        class="ie-radio-check" aria-label="">
-                                                    <div class="ie-pos-arrow ie-img3">
-                                                        <div class="ie-arrow-wrap">
-                                                            <div class="ie-arrow-padding"></div>
-                                                            <div class="ie-arrow">
-                                                                <div class="ie-apple-clickarea"></div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                    <label role="presentation">
-                                                        <input type="radio" name="mc-carousel-id-1751619445451"
-                                                            class="ie-radio-check" aria-label="">
-                                                        <div class="ie-pos-arrow ie-img4">
-                                                            <div class="ie-arrow-wrap">
-                                                                <div class="ie-arrow-padding"></div>
-                                                                <div class="ie-arrow">
-                                                                    <div class="ie-apple-clickarea"></div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                        <label role="presentation">
-                                                            <div class="ie-mid">
-
-                                                                <span class="ie-img-wrap ie-img4"><span class="ie-slide"
-                                                                        role="img" title=""></span></span>
-
-                                                                <span class="ie-img-wrap ie-img3"><span class="ie-slide"
-                                                                        role="img" title=""></span></span>
-
-                                                                <span class="ie-img-wrap ie-img2"><span class="ie-slide"
-                                                                        role="img" title=""></span></span>
-
-                                                                <span class="ie-img-wrap ie-img1"><span class="ie-slide"
-                                                                        role="img" title=""></span></span>
-
-                                                            </div>
-                                                        </label>
-
-                                                        <div class="ie-thumb ie-img4"><span></span></div>
-                                                    </label>
-
-                                                    <div class="ie-thumb ie-img3"><span></span></div>
-                                                </label>
-
-                                                <div class="ie-thumb ie-img2"><span></span></div>
-                                            </label>
-
-                                            <div class="ie-thumb ie-img1"><span></span></div>
-                                        </label>
-
+                            <td>
+                                <div class="carouselCats">
+                                    <div class="carousel-imagesCats">
+                                        <div class="slide">
+                                            <img src="./01.gif" alt="foto1">
+                                            <p class="PCarouselCats" style="">
+                                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint
+                                                dignissimos
+                                                ullam
+                                                omnis sequi eveniet labore explicabo neque facilis vitae quibusdam
+                                                minima
+                                                asperiores
+                                                ratione necessitatibus iure iste perferendis, quod odio nihil!
+                                            </p>
+                                        </div>
+                                        <div class="slide">
+                                            <img src="./02.gif" alt="foto2">
+                                            <p class="PCarouselCats" style="">
+                                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint
+                                                dignissimos
+                                                ullam
+                                                omnis sequi eveniet labore explicabo neque facilis vitae quibusdam
+                                                minima
+                                                asperiores
+                                                ratione necessitatibus iure iste perferendis, quod odio nihil!
+                                            </p>
+                                        </div>
+                                        <div class="slide">
+                                            <img src="./03.gif" alt="foto3">
+                                            <p class="PCarouselCats" style="">
+                                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint
+                                                dignissimos
+                                                ullam
+                                                omnis sequi eveniet labore explicabo neque facilis vitae quibusdam
+                                                minima
+                                                asperiores
+                                                ratione necessitatibus iure iste perferendis, quod odio nihil!
+                                            </p>
+                                        </div>
+                                        <div class="slide">
+                                            <img loading="lazy" src="./04.gif" alt="foto4">
+                                            <p class="PCarouselCats" style="">
+                                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint
+                                                dignissimos
+                                                ullam
+                                                omnis sequi eveniet labore explicabo neque facilis vitae quibusdam
+                                                minima
+                                                asperiores
+                                                ratione necessitatibus iure iste perferendis, quod odio nihil!
+                                            </p>
+                                        </div>
                                     </div>
                                 </div>
-                                <!--<![endif]-->
-
-                                <div class="ie-carouselFallback" style="text-align:center">
-                                    <span style="display:block;"><img src="" alt="" width="100%"
-                                            style="max-width:100%; vertical-align:middle"></span>
-
+                                <div class="PusheenDiv">
+                                    <img class="Maltese1IMG" src="./Maltese1.gif" alt="" srcset="">
+                                </div>
+                                <div class="PusheenDiv">
+                                    <img class="Maltese2IMG" src="./Maltese2.gif" alt="" srcset="">
                                 </div>
                             </td>
                         </tr>
@@ -2698,16 +2609,18 @@
                                         Cuenta Clave: 12345678 <br><br>
                                         Titular: Ash Ketchup <br><br>
                                     </p>
+                                                                    <div class="PusheenDiv">
+                                    <img class="Maltese1IMG" src="./GiveMeTheMoney1.gif" alt="" style="width: 15%;">
+                                </div>
+                                <div class="PusheenDiv">
+                                    <img class="Maltese2IMG" src="./GiveMeTheMoney2.gif" alt="" style="width: 15%;">
+                                </div>
                                 </div>
                             </td>
                         </tr>
                         <tr>
                             <td>
-                                <div class="MalteseDiv">
-                                    <img loading="lazy" class="MalteseIMG"
-                                        src="./Screenshot_20250818_120927_Instagram-removebg-preview.png" alt=""
-                                        srcset="">
-                                </div>
+
                             </td>
                         </tr>
                     </table>
