--- a/index.html
+++ b/index.html
@@ -1880,7 +1880,7 @@
         width: 100%;
         /* 4 slides */
         height: 100%;
-        animation: slideCats 40s infinite linear;
+        animation: slideCats 60s infinite linear;
     }
 
     .slide {
@@ -2116,49 +2116,38 @@
                                         <div class="slide">
                                             <img src="./01.gif" alt="foto1">
                                             <p class="PCarouselCats" style="">
-                                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint
-                                                dignissimos
-                                                ullam
-                                                omnis sequi eveniet labore explicabo neque facilis vitae quibusdam
-                                                minima
-                                                asperiores
-                                                ratione necessitatibus iure iste perferendis, quod odio nihil!
+                                                Érase una vez, en un día radiante, un pequeño gatito de grandes ojos que
+                                                celebraba su cumpleaños. Sus amigos, entusiasmados, le organizaron una
+                                                fiesta repleta de juegos y sorpresas.
                                             </p>
                                         </div>
                                         <div class="slide">
                                             <img src="./02.gif" alt="foto2">
                                             <p class="PCarouselCats" style="">
-                                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint
-                                                dignissimos
-                                                ullam
-                                                omnis sequi eveniet labore explicabo neque facilis vitae quibusdam
-                                                minima
-                                                asperiores
-                                                ratione necessitatibus iure iste perferendis, quod odio nihil!
+                                                En una de las pruebas, una amiga le colocó un antifaz, retándolo a
+                                                avanzar a ciegas por un camino lleno de desafíos. El gatito, que además
+                                                era un poco torpe, tropezaba a cada paso, chocando con todo lo que
+                                                encontraba a su alrededor. Sus amigos reían divertidos, pero el pobre
+                                                gatito empezaba a sentirse un poco perdido.
                                             </p>
                                         </div>
                                         <div class="slide">
                                             <img src="./03.gif" alt="foto3">
                                             <p class="PCarouselCats" style="">
-                                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint
-                                                dignissimos
-                                                ullam
-                                                omnis sequi eveniet labore explicabo neque facilis vitae quibusdam
-                                                minima
-                                                asperiores
-                                                ratione necessitatibus iure iste perferendis, quod odio nihil!
+                                                A lo lejos, un noble gatito negro observaba la escena. Siempre dispuesto
+                                                a ayudar, vio cómo el pequeño se caía una y otra vez. Sin pensarlo, se
+                                                acercó y, con ternura, le tendió su patita para guiarlo. Juntos
+                                                superaron cada obstáculo y, lo que comenzó como un gesto de ayuda, se
+                                                transformó en el inicio de una gran aventura.
                                             </p>
                                         </div>
                                         <div class="slide">
                                             <img loading="lazy" src="./04.gif" alt="foto4">
                                             <p class="PCarouselCats" style="">
-                                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint
-                                                dignissimos
-                                                ullam
-                                                omnis sequi eveniet labore explicabo neque facilis vitae quibusdam
-                                                minima
-                                                asperiores
-                                                ratione necessitatibus iure iste perferendis, quod odio nihil!
+                                                Cuentan que desde aquel día, esos dos gatitos inseparables han recorrido el mundo
+                                                tomados de la pata, construyendo un sendero lleno de amor y complicidad.
+                                                De una caída inesperada nació la historia de un amor que sigue
+                                                creciendo con cada paso que dan juntos.
                                             </p>
                                         </div>
                                     </div>
@@ -2201,7 +2190,7 @@
                             <td class="" style="height: 25%;">
                                 <div class="">
                                     <h1 class="H1Sellos">
-                                        <span style="color: white;">El Gran</span> Día
+                                        <span style="color: white;">El Gran</span> Dia
                                     </h1>
                                 </div>
                             </td>
@@ -2227,7 +2216,7 @@
                                             </g>
                                         </g>
                                     </svg>
-                                    <h2 class="H2Donde">¿Dónde? <span><a
+                                    <h2 class="H2Donde">¿Donde? <span><a
                                                 href="https://maps.app.goo.gl/1WXCSaaM65sEmmF76"
                                                 style="color:#fcc85e">Ver
                                                 Mapa</a></span> <br>Jardín Santa Bárbara</h2>
@@ -2249,7 +2238,7 @@
                                                 stroke-linejoin="round"></path>
                                         </g>
                                     </svg>
-                                    <h2 class="H2Cuando">¿Cuándo? <br>Diciembre 13, 2025. 2:30 PM</h2>
+                                    <h2 class="H2Cuando">¿Cuando? <br>Diciembre 13, 2025. 2:30 PM</h2>
                                 </div>
                             </td>
                         </tr>
@@ -2261,7 +2250,7 @@
                                 <div class="Texto">
                                     <h3>
                                         Queremos hacer tu viaje lo más <span
-                                            style="color: rgb(225, 150, 191);">cómodo</span> posible. Haz clic para
+                                            style="color: rgb(225, 150, 191);">comodo</span> posible. Haz clic para
                                         conocer las
                                         opciones de transporte y alojamiento que hemos preparado para ti.
                                     </h3>
