--- a/index.html
+++ b/index.html
@@ -1865,6 +1865,7 @@
         background-color: white;
         padding: 4%;
         border-radius: 10px;
+        word-wrap: anywhere;
     }
 
     .carouselCats {
@@ -2144,7 +2145,8 @@
                                         <div class="slide">
                                             <img loading="lazy" src="./04.gif" alt="foto4">
                                             <p class="PCarouselCats" style="">
-                                                Cuentan que desde aquel día, esos dos gatitos inseparables han recorrido el mundo
+                                                Cuentan que desde aquel día, esos dos gatitos inseparables han recorrido
+                                                el mundo
                                                 tomados de la pata, construyendo un sendero lleno de amor y complicidad.
                                                 De una caída inesperada nació la historia de un amor que sigue
                                                 creciendo con cada paso que dan juntos.
